--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -2,3 +2,32 @@
 //
 // The variables you want to modify
 // $font-size-root: 20px;
+
+// Globals
+// $body-font-family: 'Work Sans', serif;
+// $border-radius-root: 6px;
+// $font-size-root: 6px;
+
+// // Variables must come before the import
+// $btn-letter-spacing: 0;
+// $btn-font-weight: 400;
+// $list-item-title-font-size: 0.929rem;
+// $list-item-dense-title-font-size: 0.929rem;
+// $list-item-dense-title-font-weight: initial;
+// $fab-icon-sizes: (
+//   'small': 20
+// );
+// $btn-sizes: (
+//   'default': 41,
+//   'large': 54
+// );
+
+// $headings: (
+//   'h1': (
+//     'color': green
+//   ),
+//   'h2': (
+//     'size': 2.25rem,
+//     'line-height': 1.5em
+//   )
+// );
